[package]
name = "noise-transport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core = "0.3.21"
noise-protocol = "0.1.3"
pin-project-lite = "0.2.8"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["io-util"] }
tokio-util = { version = "0.7.1", features = ["codec"] }

[dev-dependencies]
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread", "net"] }
noise-rust-crypto = "0.5.0"
